Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.1.5 | Tested on CB 1.5.2-R1.0
 + Added new permission nodes soulbound.items.keep_on_death and soulbound.items.delete_on_death, both are false by default
 = Fixed MythicDrops support, works with MythicDrops 1.1.2
 ! Changed config file system, files now automatically update
 - Removed config options "Keep_On_Death" and "Delete_On_Death". Use permissions instead!

Version 1.1.4 | Tested on CB 1.5.2-R0.1
 + Added a new configuration option to prevent using certain commands when holding a Soulbound item
 + Added a new configuration option to Soulbind the item in hand when a certain command is used.
 + Added an option to disable the feedback messages "Inventory now Soulbound to.."
 ! Hoppers can no longer pickup Soulbound items
 = Fixed infinite durability not working for armor and special tools

Version 1.1.3 | Tested on CB 1.5.0-R0.1
 + Added MythicDrops support
 + Added permission node which allows certain players to pickup items which are not Soulbound to that player
 + Added permission node which limit the maximum amount of Soulbound items a player can carry at once
 + Added new configuration option to let Soulbound items have infinite durability
 + Added new command to Soulbind a full inventory. /bind [player] inventory
 = Fixed bug which caused the plugin to ignore cancelled SoulbindItemEvents
 ! Improved the Bind on Equip mechanism even more, to account for recent inventory changes in MC 1.5

Version 1.1.2 | Tested on CB 1.4.7-R1.0 & 1.5.0-R0.1
 + Added help pages, access them using /soulbound help
 = Fixed bug where DiabloDrops chests where never edited. Chest generated by DiabloDrops can now also contain Soulbound items
 = Fixed bug where Chainmail armor and Skulls were never Binded on Equip
 = Fixed bug which caused an NPE when trying to bind with nothing in hand
 = Fixed bug which would throw an ArrayIndexOutOfBounds error
 = Fixed bug which allowed player to Soulbind items twice